# EasyMoneyManager

./: .gitignore  README.md  package-lock.json
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-prod.yml  firebase-hosting-pull-request.yml
backend/: .env.example  Pipfile  firebase_utils.py  main.py  pyproject.toml  requirements.txt  utils.py
frontend/: .env.example  .firebaserc  .gitignore  package-lock.json  package.json
frontend/src/: App.vue  config.js  main.js  useAuth.js
frontend/src/components/: BottomNavbar.vue  RecordCard.vue  RecordView.vue  SearchBar.vue  StockView.vue  TimeSelector.vue  TitleBar.vue
frontend/src/router/: index.js
frontend/src/stores/: toastStore.js
frontend/src/views/: EditPage.vue  HistoryPage.vue  InvestmentPage.vue  LoginPage.vue  RecordPage.vue
