[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "firebase-admin>=7.1.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "gunicorn>=23.0.0",
    "joblib>=1.5.2",
    "lxml>=6.0.2",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "twstock>=1.4.0",
    "yfinance>=0.2.66",
]
